force-app/main/default/objects/Employee_Training__c/Employee_Training__c.object-meta.xml
<CustomObject>
    <description>Custom object to relate employees with trainings</description>
    <label>Employee Training</label>
    <nameField>
        <label>Employee Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>