force-app/main/default/objects/Employee_Training__c/fields/Actual_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Minutes__c</fullName>
    <label>Actual Minutes</label>
    <summarizedField>Employee_Activity__c.Actual_Minutes__c</summarizedField>
    <summaryFilterItems>
        <field>Employee_Activity__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Activity__c.Employee_Training__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>