force-app/main/default/objects/Employee_Training__c/fields/Ahead_Behind__c.field-meta.xml
<CustomField>
    <fullName>Ahead_Behind__c</fullName>
    <formula>IF(
    (Days_in_Training__c * 60) - Total_Minutes__c&lt;0,
    &quot;(&quot;,
    &quot;&quot;
) 
&amp; 
IF(
    ABS((Days_in_Training__c * 60) - Total_Minutes__c)=0,
    &quot;0m&quot;,
    IF(
        ABS((Days_in_Training__c * 60) - Total_Minutes__c)&gt;=60,
        TEXT(FLOOR(ABS((Days_in_Training__c * 60) - Total_Minutes__c)/60)) &amp; &quot;h&quot;,
        &quot;&quot;
    ) 
    &amp; 
    IF(
        MOD(ABS((Days_in_Training__c * 60) - Total_Minutes__c),60)&gt;0,
        IF(
            ABS((Days_in_Training__c * 60) - Total_Minutes__c)&gt;=60,
            &quot; &quot;,
            &quot;&quot;
        ) 
        &amp; 
        TEXT(MOD(ABS((Days_in_Training__c * 60) - Total_Minutes__c),60)) &amp; &quot;m&quot;,
        &quot;&quot;
    )
) 
&amp; 
IF(
    (Days_in_Training__c * 60) - Total_Minutes__c&lt;0, 
    &quot;)&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ahead / Behind</label>
    <type>Text</type>
</CustomField>