force-app/main/default/objects/Employee_Training__c/fields/Completed_Activities__c.field-meta.xml
<CustomField>
    <fullName>Completed_Activities__c</fullName>
    <label>Completed Activities</label>
    <summaryFilterItems>
        <field>Employee_Activity__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Activity__c.Employee_Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>