force-app/main/default/objects/Employee_Training__c/fields/Days_in_Training__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Training__c</fullName>
    <formula>IF(Start_Date__c &gt; TODAY(),0, TODAY()-Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>