force-app/main/default/objects/Employee_Training__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(
    Total_Minutes__c = 0,
    &quot;0m&quot;,
    IF(
        Total_Minutes__c &gt;= 60,
        TEXT(FLOOR(Total_Minutes__c/60)) &amp; &quot;h&quot;,
        &quot;&quot;
    ) &amp;
    IF(
        MOD(Total_Minutes__c,60) &gt; 0,
        IF(
            Total_Minutes__c &gt;= 60,
            &quot; &quot;,
            &quot;&quot;
        ) &amp;
        TEXT(MOD(Total_Minutes__c,60)) &amp; &quot;m&quot;,&quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>