force-app/main/default/objects/Employee_Training__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Trainings</relationshipLabel>
    <relationshipName>Employee_Trainings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>