force-app/main/default/objects/Employee_Training__c/fields/Incomplete_Activities__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Activities__c</fullName>
    <formula>No_of_Activities__c - Completed_Activities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incomplete Activities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>