force-app/main/default/objects/Employee_Training__c/fields/No_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Activities__c</fullName>
    <description>Total number of activities related to this employee training</description>
    <label>No. of Activities</label>
    <summaryForeignKey>Employee_Activity__c.Employee_Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>