force-app/main/default/objects/Employee_Training__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Overall training rating in a scale of 1 (lowest) to 5 (highest)</description>
    <label>Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>