force-app/main/default/objects/Employee_Training__c/fields/Target_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Target_Minutes__c</fullName>
    <formula>Days_in_Training__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>