force-app/main/default/objects/Employee_Training__c/fields/Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes__c</fullName>
    <description>Sum of total minutes from related employee activities</description>
    <label>Total Minutes</label>
    <summarizedField>Employee_Activity__c.Total_Minutes__c</summarizedField>
    <summaryForeignKey>Employee_Activity__c.Employee_Training__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>