force-app/main/default/objects/Employee_Training__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Employee Trainings</relationshipLabel>
    <relationshipName>Employee_Trainings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>