force-app/main/default/objects/Employee_Training__c/listViews/My_Trainings.listView-meta.xml
<ListView>
    <fullName>My_Trainings</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Status__c</columns>
    <columns>Duration__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Total_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Trainings</label>
</ListView>